--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -5,7 +5,7 @@
 \usepackage{graphicx}
 
 %%%   PREDEFINITIONS   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\kdtree}{$k$-d tree}
+\newcommand{\kdtree}{$k$-d~tree}
 
 \begin{document}
 
