--- a/doc/pubs/MOKP-DP-2017/tex/refs.bib
+++ b/doc/pubs/MOKP-DP-2017/tex/refs.bib
@@ -71,3 +71,11 @@
   organization={Wiley Online Library}
 }
 
+# KDTree efficiency on high-demantional data
+@book{toth2004handbook,
+  title={Handbook of discrete and computational geometry},
+  author={Toth, Csaba D and O'Rourke, Joseph and Goodman, Jacob E},
+  year={2004},
+  publisher={CRC press}
+}
+
