--- a/doc/pubs/MOKP-DP-2017/tex/04-kdtree.tex
+++ b/doc/pubs/MOKP-DP-2017/tex/04-kdtree.tex
@@ -2,25 +2,32 @@
 %  - primeira proposta. 
 %  - Objetivo. Eficientcia
 %  - Teste de colisão, pertinencia e amplitude
-The \kdtree{} is a type of binary search tree for indexing multidimenstional
+% Utilizacao:
+The \kdtree{} is a type of binary search tree for indexing multidimensional
 data with simple construction and low space usage.
 Despite its simplicity it efficiently supports operations like nearest
-neighbour search and range search~\cite{bentley1975} and is widely used on
+neighbour search and range search~\cite{bentley1975}.
+For those reasons \kdtree{} is widely used on
 spacial geometry algorithms~\cite{preparata2012computational, guttman1984r}, 
-clustering algorithms~\cite{kanungo2002efficient, indyk1998approximate}
-and ~\cite{owens2007survey}
+clustering~\cite{kanungo2002efficient, indyk1998approximate}
+and graphic rendering algorithms~\cite{owens2007survey}.
 
-% Utilizacao:
-%  - objetos espaciais 2D/3D):
-%  - renderizacao
+Like a standard binary search tree, the \kdtree{} subdivides data at each
+recursive level of the tree.
+Unlike a standard binary tree, that users only one key for all levels of the tree,
+the \kdtree{} uses $k$ keys and cycles through these keys for successive levels
+of the tree.
 
 % Vantagens sobre outras estruturas (quad-tree, etc):
 %  - menor sensibilidade a distribuicao tendensiosa.
-Its advantages.
+% Its advantages.
 
-% Discussao sobre eficiencia
-%  - máximo de dimensoes ( |n| >> 2^dim )
-Efficiency notes.
+Concerning it's efficiency, it is important to consider the number of dimensions
+\kdtree{} is indexing.
+As a general rule, a \kdtree{} is suitable for efficiently indexing of $n$ elements
+if $n$ is much greater than $2^k$.
+Otherwise, when \kdtree{} are used with high-dimensional data, most of the elements
+in the tree will be evaluated and the efficiency is no better than exhaustive search~\cite{toth2004handbook}.
 
 % Estrutura e Operacoes:
 %  - estrutura de indexacão
