--- a/doc/pubs/MOKP-DP-2017/tex/04-kdtree.tex
+++ b/doc/pubs/MOKP-DP-2017/tex/04-kdtree.tex
@@ -29,20 +29,12 @@ if $n$ is much greater than $2^k$.
 Otherwise, when \kdtree{} are used with high-dimensional data, most of the elements
 in the tree will be evaluated and the efficiency is no better than exhaustive search~\cite{toth2004handbook}.
 
-% Estrutura e Operacoes:
-%  - estrutura de indexacão
-%  - Insercao
-%  - range-search
-Its operations...
-
-% Utilizacao no Algoritmo
-% Possibilidade de utilizacao no processo de range seaarch, ao buscar uma
-% solucao dominante.
-Use on the algorithm.
-
 % Explicacão da indexacão das solucoes e da funcao de range.
+% Indexar apenas os profits, pois nos pontos em que é necessário o range-search,
+% não é necessário considerar o peso.
 Indexing the solutions and range operations.
 
 % Mencionar que esta proposta de indexacao viabiliza a aplicacão do algoritmo em problemas
 % com maiores dimensões.
 Tends to increase the feasibility on problems with higher dimensions.
+
