--- a/doc/pubs/MOKP-DP-2017/tex/03-dynprog.tex
+++ b/doc/pubs/MOKP-DP-2017/tex/03-dynprog.tex
@@ -1,3 +1,5 @@
+% Breve resumo sobre métodos de programação dynamica
+% Explicação overview do método para o MOKP
 % - Process overview of DP for MKP
 % - Dom. relations
 % - Application of dom. rel.
