--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -9,6 +9,7 @@
 \newcommand{\kdtree}{$k$-d~tree}
 \newcommand{\sol}[1]{\boldsymbol{#1}}
 \newcommand{\np}{k}
+\newcommand{\nphard}{$\mathcal{NP}$-Hard}
 
 \begin{document}
 
