--- a/doc/pubs/MOKP-DP-2017/tex/02-mokp.tex
+++ b/doc/pubs/MOKP-DP-2017/tex/02-mokp.tex
@@ -47,5 +47,13 @@ Formally the definition of the problem is:
     w(\sol{x}) &= \sum_{i=1}^{n} w_i x_i
 \end{align*}
 
+The MOKP is considered a \nphard{} problem, since it is a generalization
+of the well-known 0$-$1 knapsack problem and
+it is quite difficult to determine the Pareto optimal set for the MOKP,
+especially for high dimension instances, in which the Pareto set it self tends
+to grow exponentially.
+For this reason, the development of methods efficiently deal with high-dimension
+instances is...
+
 % Definições, Propriedados e teoremas para o MOKP: dominancia
 
