--- a/doc/pubs/MOKP-DP-2017/tex/refs.bib
+++ b/doc/pubs/MOKP-DP-2017/tex/refs.bib
@@ -79,3 +79,15 @@
   publisher={CRC press}
 }
 
+% hardness of MOKP
+@article{lust2012multiobjective,
+  title={The multiobjective multidimensional knapsack problem: a survey and a new approach},
+  author={Lust, Thibaut and Teghem, Jacques},
+  journal={International Transactions in Operational Research},
+  volume={19},
+  number={4},
+  pages={495--520},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
