--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -10,6 +10,7 @@
 \newcommand{\sol}[1]{\boldsymbol{#1}}
 \newcommand{\np}{k}
 \newcommand{\nphard}{$\mathcal{NP}$-Hard}
+\newcommand{\missing}[1]{\fbox{\tiny \bf #1}}
 
 \begin{document}
 
@@ -58,27 +59,27 @@
 \section{Introduction}
 \label{sec:intro}
 % THE MOKP Problem
-\input{tex/01-intro.tex}
+\input{tex/secs/01-intro.tex}
 
 \section{The Multiobjective Knapsack Problem}
 \label{sec:mokp}
-\input{tex/02-mokp.tex}
+\input{tex/secs/02-mokp.tex}
 
 \section{The Dynamic Programing Algorithm}
 \label{sec:progdyn}
-\input{tex/03-dynprog.tex}
+\input{tex/secs/03-dynprog.tex}
 
 \section{The use of data structure}
 \label{sec:kdtree}
-\input{tex/04-kdtree.tex}
+\input{tex/secs/04-kdtree.tex}
 
 \section{Computational experiments}
 \label{sec:exp}
-\input{tex/05-experiments.tex}
+\input{tex/secs/05-experiments.tex}
 
 \section{Conclusions and future remarks}
 \label{sec:conc}
-\input{tex/06-conc.tex}
+\input{tex/secs/06-conc.tex}
 
 \bibliographystyle{plain}
 \bibliography{tex/refs}
