--- a/doc/pubs/MOKP-DP-2017/src/secs/03-dynprog.tex
+++ b/doc/pubs/MOKP-DP-2017/src/secs/03-dynprog.tex
@@ -3,6 +3,14 @@
 % - Process overview of DP for MKP
 % - Dom. relations
 % - Application of dom. rel.
+
+\missing{Paragrafo de introducao da secao, justificando toda a explicacao que segue..}
+
+The dynamic programming algorithm consists of $n$ steps.
+Basically in $i$-th step the previous set of solution is replicated
+
+
+
 \cite{bazgan2009}
 
 
