correcao do path do abstract.tex

--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -5,6 +5,8 @@
 \usepackage{graphicx}
 \usepackage{bm}
 
+\usepackage{algorithmicx}
+
 %%%   PREDEFINITIONS   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\kdtree}{$k$-d~tree}
 \newcommand{\sol}[1]{\boldsymbol{#1}}
@@ -53,7 +55,7 @@
 \maketitle
 
 \begin{abstract}
-\input{tex/abstract.tex}
+\input{src/abstract.tex}
 \end{abstract}
 
 \section{Introduction}
