--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -5,7 +5,8 @@
 \usepackage{graphicx}
 \usepackage{bm}
 
-\usepackage{algorithmicx}
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 
 %%%   PREDEFINITIONS   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\kdtree}{$k$-d~tree}
@@ -61,30 +62,30 @@
 \section{Introduction}
 \label{sec:intro}
 % THE MOKP Problem
-\input{tex/secs/01-intro.tex}
+\input{src/secs/01-intro.tex}
 
 \section{The Multiobjective Knapsack Problem}
 \label{sec:mokp}
-\input{tex/secs/02-mokp.tex}
+\input{src/secs/02-mokp.tex}
 
 \section{The Dynamic Programing Algorithm}
 \label{sec:progdyn}
-\input{tex/secs/03-dynprog.tex}
+\input{src/secs/03-dynprog.tex}
 
 \section{The use of data structure}
 \label{sec:kdtree}
-\input{tex/secs/04-kdtree.tex}
+\input{src/secs/04-kdtree.tex}
 
 \section{Computational experiments}
 \label{sec:exp}
-\input{tex/secs/05-experiments.tex}
+\input{src/secs/05-experiments.tex}
 
 \section{Conclusions and future remarks}
 \label{sec:conc}
-\input{tex/secs/06-conc.tex}
+\input{src/secs/06-conc.tex}
 
 \bibliographystyle{plain}
-\bibliography{tex/refs}
+\bibliography{src/refs}
 
 \end{document}
 
