--- a/doc/pubs/MOKP-DP-2017/src/secs/03-dynprog.tex
+++ b/doc/pubs/MOKP-DP-2017/src/secs/03-dynprog.tex
@@ -7,8 +7,9 @@
 \missing{Paragrafo de introducao da secao, justificando toda a explicacao que segue..}
 
 The dynamic programming algorithm consists of $n$ steps.
-Basically in $i$-th step the previous set of solution is replicated
+The first step receives 
 
+\input{src/algs/dp1.tex}
 
 
 \cite{bazgan2009}
