--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -10,10 +10,12 @@
 
 %%%   PREDEFINITIONS   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\kdtree}{$k$-d~tree}
+\newcommand{\bsym}[1]{\boldsymbol{#1}}
 \newcommand{\sol}[1]{\boldsymbol{#1}}
 \newcommand{\np}{k}
 \newcommand{\nphard}{$\mathcal{NP}$-Hard}
 \newcommand{\missing}[1]{\fbox{\tiny \bf #1}}
+\newcommand{\dominates}[2]{dominates(\sol{#1}, \sol{#2})}
 
 \begin{document}
 
