--- a/doc/pubs/MOKP-DP-2017/src/refs.bib
+++ b/doc/pubs/MOKP-DP-2017/src/refs.bib
@@ -91,3 +91,26 @@
   publisher={Wiley Online Library}
 }
 
+% dominance relation
+@article{weingartner1967methods,
+  title={Methods for the solution of the multidimensional 0/1 knapsack problem},
+  author={Weingartner, H Martin and Ness, David N},
+  journal={Operations Research},
+  volume={15},
+  number={1},
+  pages={83--103},
+  year={1967},
+  publisher={INFORMS}
+}
+
+% dyn prog algorithm
+@article{nemhauser1969discrete,
+  title={Discrete dynamic programming and capital allocation},
+  author={Nemhauser, George L and Ullmann, Zev},
+  journal={Management Science},
+  volume={15},
+  number={9},
+  pages={494--505},
+  year={1969},
+  publisher={INFORMS}
+}
