--- a/doc/pubs/MOKP-DP-2017/src/secs/03-dynprog.tex
+++ b/doc/pubs/MOKP-DP-2017/src/secs/03-dynprog.tex
@@ -6,13 +6,25 @@
 
 \missing{Paragrafo de introducao da secao, justificando toda a explicacao que segue..}
 
-The dynamic programming algorithm consists of $n$ steps.
-The first step receives 
+We will introduce the dynamic programming algorithm for the MOKP proposed in \cite{bazgan2009}.
+This algorithm is based on the classical dynamic programming algorithm proposed in \cite{nemhauser1969discrete},
+although with some optimizations.
+
+\subsection{The basic dynamic programming algorithm}
+The sequential process used in the algorithm consists of $n$ stages.
+At the $i$ stage the algorithm generates a set $S^k$ solutions that correspond
+to subsets containing exclusively the first $i$ itens, i.e.\ ,
+$\forall\sol{x} \in S^k, \sol{x} \subseteq \{1, \ldots, k\}$.
 
 \input{src/algs/dp1.tex}
 
+\subsection{Avoiding deficient solutions}
 
-\cite{bazgan2009}
+...those solutions
+
+\subsection{Removing unpromissing solutions}
+
+\subsection{Item order}
 
 
 % Basic simple Dynamic Programming
