--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -15,7 +15,8 @@
 \newcommand{\np}{k}
 \newcommand{\nphard}{$\mathcal{NP}$-Hard}
 \newcommand{\missing}[1]{\fbox{\tiny \bf #1}}
-\newcommand{\dominates}[2]{dominates(\sol{#1}, \sol{#2})}
+\newcommand{\dominates}[2]{dom(\sol{#1}, \sol{#2})}
+\newcommand{\dominatesp}[2]{dom_p(\sol{#1}, \sol{#2})}
 
 \begin{document}
 
