--- a/doc/pubs/MOKP-DP-2017/src/secs/02-mokp.tex
+++ b/doc/pubs/MOKP-DP-2017/src/secs/02-mokp.tex
@@ -18,11 +18,12 @@ each objective has to be minimized (or maximized).
 Considering two decision vectors $\sol{a}, \sol{b} \in X$, $\sol{a}$ is said to
 \emph{dominate} $\sol{b}$ if, and only if $\sol{a}$ is at least as good as $\sol{b}$
 in all objectives and better than $\sol{b}$ in at least one objective.
+For shortening we will say that $\sol{a}$ dominates $\sol{b}$ by saying $\dominates{a}{b}$.
 Formally:
 \begin{displaymath}
     \dominates{a}{b} = \left\{
       \begin{array}{l}
-          \forall i \in \{1, 2, \ldots, \np\}: f_i(\sol{a}) \geq f_i(\sol{b}) \text{and}\\
+          \forall i \in \{1, 2, \ldots, \np\}: f_i(\sol{a}) \geq f_i(\sol{b}) ~\text{and}\\
           \exists j \in \{1, 2, \ldots, \np\}: f_j(\sol{a}) > f_j(\sol{b})
   \end{array} \right.
 \end{displaymath}
@@ -50,8 +51,9 @@ Formally the definition of the problem is:
     \text{max   } & f(\sol{s}) = 
       \big(f_1(\sol{s}) ,f_2(\sol{s}) ,\ldots ,f_{\np}(\sol{s})\big) \\
     \text{subject to   } & w(\sol{s}) < W \\
-    & \sol{s} \subseteq \{1, \ldots, n\}\\
+    & \sol{s} \subseteq I_n\\
     \text{where} \phantom{mmmmm} \\
+    I_n &= \{1, \ldots, n\}\\
     f_j(\sol{s}) &= \sum_{i \in \sol{s}} p^j_i\\
     w(\sol{s}) &= \sum_{i \in \sol{s}} w_i
 \end{align*}
