--- a/doc/pubs/MOKP-DP-2017/src/algs/dp1.tex
+++ b/doc/pubs/MOKP-DP-2017/src/algs/dp1.tex
@@ -3,9 +3,12 @@
     \State $S^0 = \big\{\emptyset\big\}$
     \For{$k \gets 1, n$}
       \State $S_*^k = S^{k-1} \cup \{\sol{x} \cup k \:|\: \sol{x} \in S^{k-1}\}$
+        \Comment{solutions extension}
       \State $S^k = \{\sol{x} \:|\: \nexists \sol{a} \in S_*^k: \dominatesp{a}{x} \}$
+        \Comment{partial dominance filter}
     \EndFor
-  \State $P = \{\sol{x} \:|\: \nexists \sol{a} \in S_*^k: \dominates{a}{x} \}$
+  \State $P = \{\sol{x} \:|\: \nexists \sol{a} \in S^n: \dominates{a}{x} \}$
+    \Comment{dominance filter}
   \State \Return $P$
   \EndFunction
 \end{algorithmic}
