--- a/doc/pubs/MOKP-DP-2017/src/secs/02-mokp.tex
+++ b/doc/pubs/MOKP-DP-2017/src/secs/02-mokp.tex
@@ -43,7 +43,7 @@ Each item $i$ has a positive weight $w_i$ and non negative integer
 profits $p_i^1, p_i^2, \ldots, p_{i}^{\np}$.
 Each profit $p_i^k$ represents the contribution of the $i$-th item for $k$-th objective.
 A solution is represented by a set $\sol{s} \subseteq \{1, \ldots, n\}$
-containing the indexes of the itens included in the solution.
+containing the indexes of the items included in the solution.
 A solution is feasible if the total weight included in the knapsack does
 not exceed its capacity.
 Formally the definition of the problem is:
