--- a/doc/pubs/MOKP-DP-2017/src/secs/02-mokp.tex
+++ b/doc/pubs/MOKP-DP-2017/src/secs/02-mokp.tex
@@ -49,9 +49,9 @@ Formally the definition of the problem is:
     \text{max   } & f(\sol{s}) = 
       \big(f_1(\sol{s}) ,f_2(\sol{s}) ,\ldots ,f_{\np}(\sol{s})\big) \\
     \text{subject to   } & w(\sol{s}) < W \\
-    & \sol{s} \subseteq I_n\\
+    & \sol{s} \subseteq \setIN\\
     \text{where} \phantom{mmmmm} \\
-    I_n &= \{1, \ldots, n\}\\
+    %I_n &= \{1, \ldots, n\}\\
     f_j(\sol{s}) &= \sum_{i \in \sol{s}} p^j_i\\
     w(\sol{s}) &= \sum_{i \in \sol{s}} w_i
 \end{align*}
