criando grafico dom

--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -3,7 +3,10 @@
 \usepackage{amsfonts}
 \usepackage{amssymb,amsmath,amsthm}
 \usepackage{graphicx}
-\usepackage{bm}
+\usepackage{bm}  % bold math symbols (\boldsymbol)
+
+\usepackage{pstricks}
+\usepackage{pstricks-add}
 
 \usepackage{algorithm}
 \usepackage{algpseudocode}
