--- a/doc/pubs/MOKP-DP-2017/src/secs/03-dynprog.tex
+++ b/doc/pubs/MOKP-DP-2017/src/secs/03-dynprog.tex
@@ -39,6 +39,8 @@ Formally:
   \end{array} \right.
 \end{displaymath}
 
+\input{src/imgs/dom.tex}
+
 The pseudocode for the algorithm is presented in Algorithm~\ref{alg:nemull}.
 \begin{algorithm}
   \caption{Basic dynamic programming algorithm for MOKP}
