--- a/doc/pubs/MOKP-DP-2017/src/imgs/dom.tex
+++ b/doc/pubs/MOKP-DP-2017/src/imgs/dom.tex
@@ -1,11 +1,35 @@
 
-\begin{pspicture}(10, 10)
+\begin{pspicture}(-2,-2)(10, 10)
+  % PONTOS-PARETO
   \def\sol#1#2{
     \qdisk(#1,#2){0.1}
-    \rput(#1,#2){\rput(0,0.4){(#1,#2)}}
+    \rput(#1,#2){\rput(0.3,0.4){(#1,#2)}}
   }
-  \psgrid[gridlabels=0,subgriddiv=0,gridwidth=0.02,griddots=10](1,1)(10,10)
-  \psaxes[arrowscale=2]{->}(1,1)(1,1)(10,10)
+  % SOLUCAO DOMINADA
+  \def\dominated#1#2{
+    % ponto (x)
+    \rput(#1,#2){
+      \rput(0.3,0.4){(#1,#2)}
+      \psscalebox{1.3}{
+        \psline[linewidth=0.05]{cc-cc}(-.1,-.1)(.1,.1)
+        \psline[linewidth=0.05]{cc-cc}(.1,-.1)(-.1,.1)
+      }
+    }
+    % area
+    \psframe[linewidth=0.0001,fillstyle=hlines,hatchwidth=0.01,hatchcolor=black](0, 9)(#1,#2)
+  }
+  % LEGENDAS
+  \def\plbl{\rput[bl]{90}(-0.7,0.5){\Large Profit}}
+  \def\wlbl{\rput[bl](0.3,-1.2){\Large Weight}}
+  % GRID
+  \psgrid[gridlabels=0,subgriddiv=0,gridwidth=0.02,griddots=10](0,0)(9,9)
+  \psaxes[arrowscale=2]{->}(0,0)(0,0)(9,9)
+  \plbl
+  \wlbl
   \sol{1}{1}
   \sol{2}{2}
+  \sol{3}{4}
+  \sol{5}{5}
+  \sol{7}{6}
+  \dominated{4}{3}
 \end{pspicture}
